src/types/tests/snapshots/tgbot__types__tests__media__paid_media_info.snap
---
source: src/types/tests/media.rs
expression: "PaidMediaInfo::new(1,\n[PaidMedia::Photo(vec![PhotoSize::new(\"file-id\", \"file-unique-id\", 200,\n300)]),\nPaidMedia::Preview(PaidMediaPreview::default().with_duration(100).with_height(200).with_width(300),),],)"
---
{
  "star_count": 1,
  "paid_media": [
    {
      "type": "photo",
      "photo": [
        {
          "file_id": "file-id",
          "file_unique_id": "file-unique-id",
          "height": 200,
          "width": 300
        }
      ]
    },
    {
      "type": "preview",
      "duration": 100,
      "height": 200,
      "width": 300
    }
  ]
}
