src/types/tests/snapshots/tgbot__types__tests__media__paid_media_photo.snap
---
source: src/types/tests/media.rs
expression: "PaidMedia::Photo(vec![PhotoSize::new(\"file-id\", \"file-unique-id\", 200, 300)])"
---
{
  "type": "photo",
  "photo": [
    {
      "file_id": "file-id",
      "file_unique_id": "file-unique-id",
      "height": 200,
      "width": 300
    }
  ]
}
