src/types/tests/snapshots/tgbot__types__tests__media__paid_media_preview.snap
---
source: src/types/tests/media.rs
expression: "PaidMedia::Preview(PaidMediaPreview::default())"
---
{
  "type": "preview"
}
