src/types/tests/snapshots/tgbot__types__tests__media__paid_media_video.snap
---
source: src/types/tests/media.rs
expression: "PaidMedia::Video(Box::new(Video::new(100, \"file-id\", \"file-unique-id\", 200,\n300)))"
---
{
  "type": "video",
  "video": {
    "duration": 100,
    "file_id": "file-id",
    "file_unique_id": "file-unique-id",
    "height": 200,
    "width": 300
  }
}
