src/types/tests/snapshots/tgbot__types__tests__media__send_media_group.snap
---
source: src/types/tests/media.rs
expression: actual_data
---
{
  "__attachments__": [
    {
      "id": "tgbot_file_1",
      "mime_type": null,
      "name": null
    },
    {
      "id": "tgbot_file_2",
      "mime_type": null,
      "name": null
    },
    {
      "id": "tgbot_file_3",
      "mime_type": null,
      "name": null
    },
    {
      "id": "tgbot_file_4",
      "mime_type": null,
      "name": null
    },
    {
      "id": "tgbot_file_5",
      "mime_type": null,
      "name": null
    }
  ],
  "allow_paid_broadcast": "true",
  "business_connection_id": "id",
  "chat_id": "1",
  "direct_messages_topic_id": "1",
  "disable_notification": "true",
  "media": [
    {
      "media": "attach://tgbot_file_1",
      "type": "audio"
    },
    {
      "media": "attach://tgbot_file_2",
      "type": "document"
    },
    {
      "media": "file-id",
      "photo": "photo-id",
      "type": "live_photo"
    },
    {
      "media": "attach://tgbot_file_3",
      "type": "photo"
    },
    {
      "caption": "caption",
      "media": "attach://tgbot_file_4",
      "type": "photo"
    },
    {
      "cover": "cover-url",
      "media": "attach://tgbot_file_5",
      "type": "video"
    },
    {
      "media": "file-id",
      "thumbnail": "thumb-url",
      "type": "audio"
    },
    {
      "media": "file-id",
      "thumbnail": "thumb-url",
      "type": "document"
    },
    {
      "media": "file-id",
      "thumbnail": "thumb-url",
      "type": "video"
    }
  ],
  "message_effect_id": "effect-id",
  "message_thread_id": "1",
  "protect_content": "true",
  "reply_parameters": {
    "message_id": 1
  }
}
