src/types/tests/snapshots/tgbot__types__tests__media__send_paid_media.snap
---
source: src/types/tests/media.rs
expression: actual_data
---
{
  "chat_id": 1,
  "media": [
    {
      "media": "file-id",
      "type": "photo"
    }
  ],
  "star_count": 100
}
